# Playground.Cpp

./: .gitignore  FAQ.md  KnowledgeCollection.txt  README.md
GettingStartedTutorial/01.hello/: hello  hello.cpp
GettingStartedTutorial/02.numbers/: calculations.cpp
GettingStartedTutorial/03.strings/: strings.cpp
GettingStartedTutorial/04.headers/: hello  hello.cpp
GettingStartedTutorial/05.arrays/: main  main.cpp
GettingStartedTutorial/06.pointers/: main.cpp
GettingStartedTutorial/07.classes/: Makefile  main  main.cpp
GettingStartedTutorial/08.inheritance/: Makefile  main
GettingStartedTutorial/09.polymorphism/: Makefile  main.cpp
GettingStartedTutorial/10.abstracts/: Makefile  main  main.cpp
GettingStartedTutorial/11.templates/: Makefile  main  main.cpp
GettingStartedTutorial/11.templates/12.nestedTemplateClass/: main
GettingStartedTutorial/12.nestedTemplateClass/: main.cpp
GettingStartedTutorial/2.numbers/: calc
GettingStartedTutorial/20.byReferenceOrValue/: CMakeLists.txt  Makefile  main.cpp
GettingStartedTutorial/21.multipleFiles/: CMakeLists.txt  Makefile
GettingStartedTutorial/21.multipleFiles/src/: CMakeLists.txt  main.cpp
GettingStartedTutorial/21.multipleFiles/src/counter/: counter.cpp  counter.h
GettingStartedTutorial/4.headers/: hello.h
GettingStartedTutorial/6.pointers/: main
GettingStartedTutorial/7.classes/: main.cpp
GettingStartedTutorial/8.inheritance/: main.cpp
GettingStartedTutorial/9.polymorphism/: main
GettingStartedWithC/1.helloWorld/: Makefile  hello  hello.c
GettingStartedWithC/10.mixingCPPC/: hello  hello.cpp
GettingStartedWithC/2.header/: Makefile  hello.h
GettingStartedWithC/3.twoFiles/: Makefile1  Makefile2  Makefile3  README.rst  hello.c  hello.h  main.c
GettingStartedWithC/4.variables/: Makefile  main.c
GettingStartedWithC/5.strcat/: Makefile  main.c
GettingStartedWithCMake/1.basic/src/: CMakeLists.txt  tutorial.cpp
GettingStartedWithCMake/1.helloWorld/: CMakeLists.txt
GettingStartedWithCMake/2.cmake-tutorial/: README.txt
GettingStartedWithCMake/2.cmake-tutorial/src/: CMakeLists.txt  tutorial.cxx
GettingStartedWithCMake/2.cmake-tutorial/src/MathFunctions/: CMakeLists.txt  mysqrt.cxx
GettingStartedWithCMake/2.library/src/: CMakeLists.txt  tutorial.cpp
GettingStartedWithCMake/2.library/src/MathFunctions/: CMakeLists.txt
GettingStartedWithCMake/3.install/src/: CMakeLists.txt
GettingStartedWithCMake/3.install/src/MathFunctions/: CMakeLists.txt  mysqrt.cpp
GettingStartedWithCMake/4.test/src/: CMakeLists.txt
GettingStartedWithGTest/1.helloWorld/: CMakeLists.txt  HOWTO.sh
GettingStartedWithGTest/1.helloWorld/src/: unit-tests.cpp
GettingStartedWithGTest/2.directoryLayout/: CMakeLists.txt  HOWTO.sh
GettingStartedWithGTest/2.directoryLayout/src/: sample.cc
GettingStartedWithGTest/2.directoryLayout/tests/: unittests.cc
GettingStartedWithGTest/3.cppFileExtensions/: CMakeLists.txt
GettingStartedWithGTest/3.cppFileExtensions/tests/unit/: sampleTest.cpp
GettingStartedWithGTest/4.queue/: CMakeLists.txt
GettingStartedWithGTest/4.queue/include/: queue.h
GettingStartedWithGTest/4.queue/tests/unit/: queueTest.cpp
GettingStartedWithGTest/4.withAFixture/: CMakeLists.txt  HOWTO.sh
GettingStartedWithGTest/4.withAFixture/include/: queue.h  sample.h
GettingStartedWithGTest/4.withAFixture/tests/unit/: queueTest.cpp
GettingStartedWithGTest/demos/: Makefile  cmake_install.cmake  sample10_unittest  sample1_unittest  sample3_unittest  sample4_unittest  sample8_unittest
GettingStartedWithGTest/mybuild/: CMakeCache.txt  sample2_unittest  sample5_unittest  sample6_unittest  sample7_unittest  sample9_unittest
GettingStartedWithMeson/1.hello/2.gtk/src/: main.c
GettingStartedWithMeson/1.hello/src/: meson.build
GettingStartedWithQMake/: Makefile
GettingStartedWithQMake/1.helloWorld/: HOWTO.txt  Hello  hello.pro
GettingStartedWithQMake/2.macBundle/: Makefile  hello.pro
GettingStartedWithQMake/2.macBundle/Hello.app/Contents/MacOS/: Hello
GettingStartedWithQMake/3.projectLayout/: HOWTO.txt  Hello.pro  Makefile  Makefile.Debug  Makefile.Release  debug_hello  release_hello
GettingStartedWithQMake/3.projectLayout/src/: hello.cpp
GettingStartedWithQt/HelloQt/: CMakeLists.txt  Makefile
GettingStartedWithQt/TestCpp/: main.cpp
GettingStartedWithQt/build-TestCpp-Desktop_Qt_5_9_1_clang_64bit-Debug/: Makefile  TestCpp
GettingStartedWithQt/build-TestCpp-Desktop_Qt_5_9_1_clang_64bit-Release/: Makefile  TestCpp
